--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -9,16 +9,7 @@
     <core-header-panel border=true>
 
         <core-toolbar>
-            <div tool flex layout horizontal>
-                <core-icon-button icon="menu" on-tap={{toggleDrawer}} hidden?="{{!narrow}}"></core-icon-button>
-                <span flex class=title>The Open Journal</span>
-                <core-icon id=search-icon icon=search></core-icon>
-                <input id=search is="core-input"
-                       placeholder="Search"
-                       on-keyup={{onSearchKeyUp}}
-                        >
-                <oj-user-login currentUser={{currentUser}}></oj-user-login>
-            </div>
+            <oj-toolbar currentUser={{currentUser}} narrow={{narrow}}></oj-toolbar>
         </core-toolbar>
 
         <core-drawer-panel id=drawerPanel
@@ -54,17 +45,17 @@
       }
 
       core-toolbar {
+          height: 50px;
           color: #fff;
           font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
           background-color: rgb(51, 85, 117);
       }
-
-      .title {
-        font-size: 25px;
-        white-space: nowrap;
+      oj-toolbar {
+          height: 100%;
+          width:  100%;
       }
 
-      :host /deep/ #mainContainer{
+      :host /deep/ #mainContainer {
         background-color: white;
       }
 
@@ -75,35 +66,6 @@
         outline: none;
         z-index: 24;
         box-sizing: border-box;
-      }
-
-      #search {
-          background: #6c7ee2;
-          border: solid 1px white;
-          border-radius: 32px;
-          color: white;
-          font-size: 16px;
-          padding-left: 16px;
-          padding-top: 4px;
-          padding-bottom: 4px;
-      }
-      ::-webkit-input-placeholder {
-          color: silver;
-      }
-      :-moz-placeholder { /* Firefox 18- */
-          color: silver;
-      }
-      ::-moz-placeholder {  /* Firefox 19+ */
-          color: silver;
-      }
-      :-ms-input-placeholder {
-          color: silver;
-      }
-
-      #search-icon {
-          position: relative;
-          left:     340px;
-          top:      1px;
       }
 
     </style>
@@ -141,16 +103,6 @@
       onRouteChanged: function(event, detail) {
           var $menu = this.shadowRoot.querySelector('#mainmenu');
           $menu.routeChanged(detail);
-      },
-
-      onSearchKeyUp: function(event) {
-          if (event.keyCode==13) {
-              event.preventDefault();
-              var value = this.$.search.value;
-              value = value && $.trim(value);
-              if (value)
-                this.fire('go', '/search?q=' + encodeURIComponent(value) );
-          }
       },
 
       showNotification: function(text) {
