--- a/app/assets/components/ui-elements/oj-user-login.html
+++ b/app/assets/components/ui-elements/oj-user-login.html
@@ -14,25 +14,33 @@
     <style>
       a {
         color: #fff;
-        font-size: 0.9em;
-        font-family: "Helvetica Neue";
-        font-weight: 100;
         text-decoration: none;
+        font-weight: 100;
+        font-size: 14px;
+        font-family: "Montserrat";
+        white-space: nowrap;
       }
 
       a.username {
         font-size: 0.6em;
-
       }
 
       a.signout {
-          background: #3849a3;
           padding: 8px 12px;
+          border-width: 2px solid rgb(77, 118, 156);
+          border-radius: 5px;
+          background-color: rgb(51, 85, 117);
+          box-shadow: 0 2px 0 0 rgba(45, 74, 102, 0.004);
       }
 
       a.signout:hover {
-          background: #4053ba;
       }
+
+      a.signout:active {
+          background-color: rgb(37, 62, 86);
+          border: none;
+      }
+
     </style>
   </template>
 
