--- a/app/assets/components/subpages/oj-paper-preview.html
+++ b/app/assets/components/subpages/oj-paper-preview.html
@@ -1,34 +1,36 @@
-<polymer-element name='oj-paper-preview' attributes='user paper_id'>
+<polymer-element name='oj-paper-preview' attributes='user paper_id' fit layout horizontal>
   <template>
 
     <template if="{{paper_details && !paper_details.is_existing}}">
 
-      <div layout horizontal flex>
         <template if={{hidePDF}}>
-          <div flex id='preview'>
-            <iframe id='pdf_preview' src="{{paper_details | googlePrreviewPath}}"  frameborder="0"></iframe>
+          <div flex id=preview>
+            <iframe src="{{paper_details | googlePreviewPath}}"  frameborder="0"></iframe>
           </div>
         </template>
 
         <div id="details">
-          <h2>Preview of: <em>{{paper_details.title}}</em></h2>
+
+          <div id=preview-text>Preview</div>
+
+          <div id=title>{{paper_details.title}}</div>
 
           <template if="{{paper_details.authors | isArray}}">
-          <ul id='authors'>
-            <template repeat="{{author in paper_details.authors}}">
-              <li>{{author.name}}</li>
-            </template>
-          </ul>
+              <ul id=authors>
+                <template repeat="{{author in paper_details.authors}}">
+                    <li>{{author.name}}</li>
+                </template>
+              </ul>
           </template>
 
           <template if="{{paper_details.authors | isNotArray}}">
-            <div id='authors'>{{paper_details.authors}}</div>
+            <div id=authors>{{paper_details.authors}}</div>
           </template>
 
-          <p id='summary'>{{paper_details.summary}}</p>
+          <div id=summary>{{paper_details.summary}}</div>
           <paper-button raised role='button' on-tap={{submitForReview}}>Submit for review</paper-button>
+
         </div>
-      </div>
     </template>
 
     <template if={{$.detailsRequest.loading}}>
@@ -48,39 +50,65 @@
                on-error={{onDetailsError}}
     ></json-get>
 
-    <core-media-query query="min-width: 930px" queryMatches="{{hidePDF}}"></core-media-query>
+    <core-media-query query="min-width: 600px" queryMatches="{{hidePDF}}"></core-media-query>
 
     <style>
-      #preview{
-        width: 50%;
-        min-height: 600px;
+
+      #preview {
+          height: 100%;
       }
 
       #preview iframe{
-        width:100%;
-        height: 800px;
+        width:  100%;
+        height: 100%;
       }
 
-      #details{
-        width: 50%;
-        box-sizing: border-box;
-        padding: 0 20px;
-        font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      #details {
+          margin-top:  12px;
+          box-sizing:  border-box;
+          padding:     8px 20px;
+
+          width:       400px;
+          max-width:   50%;
       }
 
-      #authors{
-        list-style: none;
+      #preview-text {
+          text-transform: uppercase;
+          font-size:      10px;
+          margin-top:     0;
+      }
+
+      #title {
+          font-size:   26px;
+          font-weight: 700;
+          line-height: 30px;
+          margin-top:  12px;
+      }
+
+      #authors {
+        list-style:  none;
         margin-left: 0;
-        padding: 0;
+        padding:     0;
+        margin-top:  12px;
+        font-size:   14px;
+        line-height: 20px;
+        color:       rgb(154, 154, 154);
       }
 
       #authors li{
-        display: inline;
+        display:      inline;
         padding-left: 0;
       }
 
-      p#summary{
-        font-size: 0.9em;
+      #summary{
+        margin-top: 12px;
+        font-size:  12px;
+        text-align: justify;
+      }
+
+      paper-button {
+        margin-top:  12px;
+        margin-left: -1px;
       }
 
     </style>
@@ -101,13 +129,12 @@
                   this.fire('go', "/submit");
           }
       },
-      onDetailsError: function(event) {
-          var xhr = event.detail.xhr;
-
-          if (xhr.status == 404)
+      onDetailsError: function(event, detail) {
+          detail = JSON.parse(detail);
+          if (detail.code == 404)
               var message = 'The paper could not be found. Please try again.';
           else
-              var message = 'There was an error retrieving the paper: ' + xhr.statusText + ' (' + xhr.status + ')';
+              var message = 'There was an error retrieving the paper: ' + (detail.text||detail.error) + ' (' + detail.code + ')';
 
           this.fire("notification", message);
           this.fire('go', "/submit");
