--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -2,18 +2,26 @@
 <polymer-element name="oj-submit-page" attributes='paper_title paper_location'>
   <template>
     <section layout vertical class="boiler-plate">
-      <h1>Submit a paper</h1>
+      <h1>Submit a Paper</h1>
 
-        <paper-shadow id=form flex center-justified vertical layout center z="1">
+        <paper-shadow id=form flex center-justified vertical layout left z=1>
           <core-a11y-keys keys="enter" on-keys-pressed="{{submit}}"></core-a11y-keys>
 
-          <paper-input  label="arXiv identifier" value="{{paperIdentifier}}"></paper-input>
-          <paper-button  raised disabled?={{!paperValid}} on-tap={{submit}} role=button>Submit</paper-button>
+          <div class=input layout horizontal>
+              <paper-input   flex label="arXiv identifier" value="{{paperIdentifier}}"></paper-input>
+              <paper-button  raised disabled?={{!paperValid}} on-tap={{submit}} role=button>Submit</paper-button>
+          </div>
 
-          <p>Please enter the id, abstract URL or PDF URL of a paper from the arXiv.</p>
-          <p class='example'>1401.0003</p>
-          <p class='example'>http://arxiv.org/abs/1401.0003</p>
-          <p class='example'>http://arxiv.org/pdf/1401.0003.pdf</p>
+          <div id=examples>
+            <p>Please enter the id, abstract URL or PDF URL of a paper from the arXiv.</p>
+            <p>Examples:</p>
+            <ul>
+              <li>1502.00003</li>
+              <li>1401.0003</li>
+              <li>http://arxiv.org/abs/1401.0003</li>
+              <li>http://arxiv.org/pdf/1401.0003.pdf</li>
+            </ul>
+          </div>
 
         </paper-shadow>
 
@@ -33,18 +41,30 @@
         height:100%;
         min-height:400px;
       }
+      paper-shadow {
+          padding-left: 40px;
+      }
+      .input {
+          width:     600px;
+          max-width: 100%;
+      }
       #form {
-        min-width:70%;
-        background-color:white;
+        min-width:        70%;
+        background-color: white;
       }
-      paper-input {
-        width: 90%;
+      #examples {
+          font-size: 12px;
+          color: #aaaaaa;
       }
-      p.example {
-        margin     : 0 0 0 10px;
-        color      : grey;
-        opacity    : 0.7;
-        text-align : left;
+      #examples p {
+          margin-bottom: 0;
+      }
+      ul {
+          margin-top:   0;
+          padding-left: 0;
+      }
+      li {
+          list-style-type: none;
       }
     </style>
 
