--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -2,7 +2,7 @@
 
   <template>
       <template if={{showCompleted}}><input type=checkbox checked?={{assignment.completed}} onclick="return false;"/></template>
-      <span class=name>{{assignment.user.name}}</span>
+      <span class=name>{{assignment.role|capitalize}}: {{assignment.user.name}}</span>
       <template if={{removable}}><a class='remover' href='#' on-click={{remove}} >&times</a></template>
       <template if={{showColor}}><span class='color' style="{{ {backgroundColor:tagColor} | styleObject}}"></span></template>
 
@@ -14,7 +14,7 @@
         color: white;
         box-sizing: border-box;
         padding: 2px 10px;
-        border-radius: 14px;
+        border-radius: 6px;
       }
 
       :host([showcolor]) {
@@ -32,9 +32,9 @@
           background-color: white;
           width:  12px;
           height: 12px;
-          border-radius: 6px;
-          margin: 2px;
-          vertical-align: text-bottom;
+          /*border-radius: 6px;*/
+          margin: 0;
+          vertical-align: middle;
       }
 
     </style>
@@ -45,9 +45,8 @@
         assignmentChanged: function() {
         if (this.assignment ) {
             this.className = this.className + ' role-'+this.assignment.role;
-            this.title = this.assignment.role;
             if (this.assignment.user && this.assignment.user.email)
-                this.title = this.assignment.user.email + ', ' + this.title;
+                this.title = this.assignment.user.email;
         }
       },
 
