--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -2,7 +2,12 @@
 
   <template>
       <template if={{showCompleted}}><input type=checkbox checked?={{assignment.completed}} onclick="return false;"/></template>
-      <span class=name>{{assignment.role|capitalize}}: {{assignment.user.name}}</span>
+      <span class=name>
+          {{assignment.role|capitalize}}
+          <template if={{assignment.user}}>
+          : {{assignment.user.name}}
+          </template>
+      </span>
       <template if={{removable}}><a class='remover' href='#' on-click={{remove}} >&times</a></template>
       <template if={{showColor}}><span class='color' style="{{ {backgroundColor:tagColor} | styleObject}}"></span></template>
 
