Some scrolling comments into view

--- a/app/assets/components/subpages/oj-papers-page.html
+++ b/app/assets/components/subpages/oj-papers-page.html
@@ -1,7 +1,7 @@
 <polymer-element name='oj-papers-page' attributes='src header' fit>
   <template>
       
-    <section id=scroller layout vertical>
+    <div id=scroller layout vertical>
 
       <div id=top layout horizontal>
           <h1 flex>{{header}}</h1>
@@ -41,7 +41,7 @@
 
       </div>
 
-    </section>
+    </div>
 
     <style>
 
