--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -2,15 +2,17 @@
   <template>
 
     <div class='container state-{{annotation.state}} collapsed' >
+        <div class=container-inner>
 
-      <oj-reviewer-annotation-controls paper={{paper}}  annotation={{annotation}} ></oj-reviewer-annotation-controls>
+          <oj-reviewer-annotation-controls paper={{paper}}  annotation={{annotation}} ></oj-reviewer-annotation-controls>
 
-      <div on-tap="{{expand}}" class=header layout horizontal>
-          <oj-user-label assignment={{annotation.assignment|getAssignment}}></oj-user-label>
-          <markdown-simplified flex class=issue markdown={{annotation.body}}></markdown-simplified>
-          <div class=count>{{annotation.responses.length||0}} replies</div>
-      </div>
+          <div on-tap="{{expand}}" class=header layout horizontal>
+              <oj-user-label assignment={{annotation.assignment|getAssignment}}></oj-user-label>
+              <markdown-simplified flex class=issue markdown={{annotation.body}}></markdown-simplified>
+              <div class=count>{{annotation.responses.length||0}} replies</div>
+          </div>
 
+        </div>
     </div>
 
     <!-- Overlay this to get animated expansion to work nicely -->
@@ -18,38 +20,40 @@
       <core-a11y-keys keys="esc" on-keys-pressed={{collapse}}></core-a11y-keys>
 
       <div class='container state-{{annotation.state}} expanded' >
+          <div class=container-inner>
 
-          <oj-reviewer-annotation-controls paper={{paper}}  annotation={{annotation}} ></oj-reviewer-annotation-controls>
+              <oj-reviewer-annotation-controls paper={{paper}}  annotation={{annotation}} ></oj-reviewer-annotation-controls>
 
-          <template if="{{!annotation.new}}">
-              <div on-tap="{{collapse}}" class=header layout horizontal>
-                  <oj-user-label assignment={{annotation.assignment|getAssignment}}></oj-user-label>
-                  <markdown-content class=issue markdown={{annotation.body}}></markdown-content>
-              </div>
+              <template if="{{!annotation.new}}">
+                  <div on-tap="{{collapse}}" class=header layout horizontal>
+                      <oj-user-label assignment={{annotation.assignment|getAssignment}}></oj-user-label>
+                      <markdown-content class=issue markdown={{annotation.body}}></markdown-content>
+                  </div>
 
-              <oj-annotation-comments id=comments
-                                      paper={{paper}}
-                                      annotation={{annotation}}
-                                      on-new-comment-shown={{newCommentShown}}
-                      ></oj-annotation-comments>
-          </template>
+                  <oj-annotation-comments id=comments
+                                          paper={{paper}}
+                                          annotation={{annotation}}
+                                          on-new-comment-shown={{newCommentShown}}
+                          ></oj-annotation-comments>
+              </template>
 
-          <template if="{{annotation.new}}">
+              <template if="{{annotation.new}}">
 
-              <div class=header >
-                  <core-a11y-keys keys="esc" on-keys-pressed={{close}}></core-a11y-keys>
-                  <core-a11y-keys keys="shift+enter" on-keys-pressed={{submitAnnotation}}></core-a11y-keys>
-                  <markdown-text-area id=annotationTextArea class=issue value={{text}}></markdown-text-area>
-              </div>
+                  <div class=header >
+                      <core-a11y-keys keys="esc" on-keys-pressed={{close}}></core-a11y-keys>
+                      <core-a11y-keys keys="shift+enter" on-keys-pressed={{submitAnnotation}}></core-a11y-keys>
+                      <markdown-text-area id=annotationTextArea class=issue value={{text}}></markdown-text-area>
+                  </div>
 
-              <div layout horizontal>
-                  <span flex></span>
-                  <paper-icon-button icon='add'   on-click= {{submitAnnotation}} disabled?={{!text||$.saveAnnotationRequest.loading}} ></paper-icon-button>
-                  <paper-icon-button icon='close' on-click= {{close}} disabled?={{$.saveAnnotationRequest.loading}}></paper-icon-button>
-              </div>
+                  <div layout horizontal>
+                      <span flex></span>
+                      <paper-icon-button icon='add'   on-click= {{submitAnnotation}} disabled?={{!text||$.saveAnnotationRequest.loading}} ></paper-icon-button>
+                      <paper-icon-button icon='close' on-click= {{close}} disabled?={{$.saveAnnotationRequest.loading}}></paper-icon-button>
+                  </div>
 
-          </template>
+              </template>
 
+          </div>
       </div>
 
     </core-collapse>
@@ -60,14 +64,18 @@
           position:absolute;
       }
       .container {
+          box-sizing: border-box;
+          border-bottom: solid 2px white;
+      }
+      .container-inner {
           padding: 10px;
+          border-bottom: solid 1px #888;
           box-sizing: border-box;
           border-top: 7px solid;
-          border-bottom: solid 2px white;
           background-color: #efefef;
           color: black;
       }
-      .container.expanded {
+      .container-inner.expanded {
           padding-bottom: 6px;
       }
       core-collapse {
@@ -151,26 +159,30 @@
           if (list.tagName != 'OJ-ANNOTATION-LIST') console.error('annotation parent is not the oj-annotation-list');
 
           var container = list.offsetParent;
-          if (container.id != 'mainContainer') console.error('annotation-list parent is not the #mainContainer');
+          if (container.id != 'scroller') console.error('annotation-list parent is not the #scroller');
 
           var spacing = 10 /*px*/ ;
           var top     = this.offsetTop;
           var height  = this.$.collapsible.offsetHeight;
           top = top + list.offsetTop;
 
+          var newTop;
+
           if (prioritize_top && top < container.scrollTop) {
-              $(container).animate({scrollTop: top - spacing}, 500);
+              newTop = top - spacing;
 
           } else  if (top + height > container.scrollTop + container.offsetHeight ) {
-              var newTop = top + height + spacing - container.offsetHeight;
+              newTop = top + height + spacing - container.offsetHeight;
               if (prioritize_top && top < newTop)
                 newTop = top;
-              $(container).animate({scrollTop: newTop }, 500);
 
           } else if (!prioritize_top && top < container.scrollTop) {
-              $(container).animate({scrollTop: top - spacing}, 500);
+              newTop = top - spacing;
 
           }
+
+          if (newTop !== undefined)
+            $(container).animate({scrollTop: newTop}, 500);
 
       },
 
