--- a/app/assets/components/ui-elements/oj-annotation-comments.html
+++ b/app/assets/components/ui-elements/oj-annotation-comments.html
@@ -1,14 +1,16 @@
 <polymer-element name='oj-annotation-comments' attributes="paper annotation">
   <template>
 
-      <div class='comments'>
-          <template repeat="{{comment in annotation.responses}}">
-              <div layout horizontal>
-                  <oj-user-label assignment={{comment.assignment|getAssignment}}></oj-user-label>
-                  <markdown-content class=comment flex markdown="{{comment.body}}"></markdown-content>
-              </div>
-          </template>
-      </div>
+      <template if={{annotation.responses.length}}>
+          <div class='comments'>
+              <template repeat="{{comment in annotation.responses}}">
+                  <div layout horizontal>
+                      <oj-user-label assignment={{comment.assignment|getAssignment}}></oj-user-label>
+                      <markdown-content class=comment flex markdown="{{comment.body}}"></markdown-content>
+                  </div>
+              </template>
+          </div>
+      </template>
 
       <template if={{newCommentVisible}}>
           <core-a11y-keys keys="esc" on-keys-pressed={{dismissNewComment}}></core-a11y-keys>
@@ -17,15 +19,15 @@
           <markdown-text-area id=replyTextArea placeholder="Add a comment" value="{{text}}"></markdown-text-area>
 
           <div layout horizontal end-justified class='controls'>
-              <paper-icon-button disabled?={{!text||$.newCommentRequest.loading}} on-click={{submitComment}}  icon="add"></paper-icon-button>
-              <paper-icon-button disabled?={{$.newCommentRequest.loading}} on-click={{dismissNewComment}} icon="close"></paper-icon-button>
+              <paper-button disabled?={{!text||$.newCommentRequest.loading}} on-click={{submitComment}}  icon="add">Add</paper-button>
+              <paper-button disabled?={{$.newCommentRequest.loading}} on-click={{dismissNewComment}} icon="close">Cancel</paper-button>
           </div>
       </template>
 
       <template if="{{!newCommentVisible && paper.can_annotate}}">
           <div layout horizontal>
               <span flex></span>
-              <paper-icon-button on-click= {{showNewComment}} icon='reply'></paper-icon-button>
+              <paper-button on-click= {{showNewComment}} icon='reply'>Reply</paper-button>
           </div>
       </template>
 
@@ -33,7 +35,7 @@
 
       .comments {
           box-sizing: border-box;
-          padding: 10px 0 10px 0;
+          padding: 10px 0 0 0;
           font-size: 0.9em;
       }
 
@@ -50,19 +52,14 @@
           width: 100%;
       }
       markdown-text-area::shadow a.toggle {
-          bottom: -24px;
-          right:  88px;
+          bottom: -26px;
+          right:  154px;
           color:  #888;
           text-transform: lowercase;
       }
       markdown-text-area::shadow markdown-content::shadow #renderedContent {
           padding: 4px;
           min-height: 40px;
-      }
-
-      paper-icon-button {
-          padding-top:    0;
-          padding-bottom: 0;
       }
 
       oj-user-label {
