--- a/app/assets/components/ui-elements/oj-review-page-actions.html
+++ b/app/assets/components/ui-elements/oj-review-page-actions.html
@@ -46,11 +46,11 @@
       </template>
 
     <style>
-      :host /deep/ paper-button {
-          color:         #bbb !important;
-          border:        1px solid transparent !important;
-          box-shadow:    none !important;
+      paper-button {
+          color:         rgb(154, 154, 154) !important;
+          border:        1px solid rgb(154, 154, 154) !important;
           padding-top:   1px !important;
+          box-shadow:    0 4px 0 0 rgba(218, 218, 218, 0.3) !important;
       }
       paper-button core-icon {
           width: 16px !important;
@@ -63,7 +63,6 @@
       paper-button:not([disabled]):hover, paper-button:not([disabled]):active {
           color:   rgb(120, 120, 120) !important;
           border:  1px solid rgb(120, 120, 120) !important;
-          box-shadow: 0 4px 0 0 rgba(218, 218, 218, 0.3) !important;
       }
       paper-button[disabled] {
         color:      rgb(180,180,180) !important;
