Fix 404 after submission (#229)

--- a/app/assets/components/subpages/oj-paper-preview.html
+++ b/app/assets/components/subpages/oj-paper-preview.html
@@ -145,7 +145,7 @@
       },
       onPostRepsonse:function(response){
           this.fire("notification", "Paper "+this.paper_details.title+" submitted");
-          this.fire('go', "/papers")
+          this.fire('go', "/submitted")
       },
       onPostError: function(event) {
         var xhr = event.detail.xhr;
