--- a/app/assets/components/ui-elements/oj-toolbar.html
+++ b/app/assets/components/ui-elements/oj-toolbar.html
@@ -25,24 +25,26 @@
 
       .title {
           color:          #fff;
-          font-size:      25px;
+          font-size:      18px;
+          font-style:     normal;
+          font-weight:    400;
           white-space:    nowrap;
           height:         25px;
-          margin-top:     10px;
+          margin-top:     22px;
           text-transform: uppercase;
       }
 
       #search {
           background: rgb(67, 111, 153);
           border:         solid 1px #ccc;
-          border-radius:  32px;
+          border-radius:  8px;
           color:          white;
           font-size:      16px;
           padding-left:   16px;
           padding-top:    4px;
           padding-bottom: 4px;
           height:         25px;
-          margin-top:     8px;
+          margin-top:     18px;
           margin-right:   18px;
       }
       #search:hover, #search:focus {
@@ -65,12 +67,12 @@
       #search-icon {
           position: relative;
           left:     334px;
-          top:      14px;
+          top:      24px;
           color:    #ccc;
       }
 
       oj-user-login {
-          margin-top: 10px;
+          margin-top: 20px;
       }
 
     </style>
