--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -18,7 +18,7 @@ body /deep/ {
 
   paper-button {
 
-    text-transform: lowercase;
+    text-transform: capitalize;
     font-size: 14px;
     color: rgb(51, 85, 117);
     text-align: center;
